//    Copyright 2019 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r4.core;

import "google/protobuf/any.proto";
import "proto/annotations.proto";
import "proto/r4/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r4.core";
option go_package = "github.com/google/fhir/go/proto/r4/core";
option (.google.fhir.proto.fhir_version) = R4;

// Auto-generated from StructureDefinition for MedicinalProductInteraction, last
// updated 2019-11-01T09:29:23.356+11:00. MedicinalProductInteraction. See
// http://hl7.org/fhir/StructureDefinition/MedicinalProductInteraction
message MedicinalProductInteraction {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/MedicinalProductInteraction";

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated protobuf.Any contained = 6;

  // Field 7 reserved for strongly-typed ContainedResource for id:
  // MedicinalProductInteraction.contained
  reserved 7;

  // Additional content defined by implementations
  repeated Extension extension = 8;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 9;

  // The medication for which this is a described interaction
  repeated Reference subject = 10 [
    (.google.fhir.proto.valid_reference_type) = "MedicinalProduct",
    (.google.fhir.proto.valid_reference_type) = "Medication",
    (.google.fhir.proto.valid_reference_type) = "Substance"
  ];

  // The interaction described
  String description = 11;

  // The specific medication, food or laboratory test that interacts
  message Interactant {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // The specific medication, food or laboratory test that interacts
    message ItemX {
      option (.google.fhir.proto.is_choice_type) = true;

      oneof choice {
        Reference reference = 1 [
          (.google.fhir.proto.valid_reference_type) = "MedicinalProduct",
          (.google.fhir.proto.valid_reference_type) = "Medication",
          (.google.fhir.proto.valid_reference_type) = "Substance",
          (.google.fhir.proto.valid_reference_type) = "ObservationDefinition"
        ];
        CodeableConcept codeable_concept = 2;
      }
    }
    ItemX item = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];
  }
  repeated Interactant interactant = 12;

  // The type of the interaction e.g. drug-drug interaction, drug-food
  // interaction, drug-lab test interaction
  CodeableConcept type = 13;

  // The effect of the interaction, for example "reduced gastric absorption of
  // primary medication"
  CodeableConcept effect = 14;

  // The incidence of the interaction, e.g. theoretical, observed
  CodeableConcept incidence = 15;

  // Actions for managing the interaction
  CodeableConcept management = 16;
}
